# CircuitPython_HMAC

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.rst  adafruit_hmac.py  circuitpython_hmac.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  release.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: hmac_simpletest.py
